crates/pcb/tests/snapshots/info__board_without_pcb_toml.snap
---
source: crates/pcb/tests/info.rs
expression: output
---
Command: pcb info
Exit Code: 0

--- STDOUT ---
Workspace
Root: <TEMP_DIR>

Boards (1)
  TestBoard - boards/BoardWithToml/test_board.zen
    Main test board for validation
--- STDERR ---
