crates/pcb/tests/snapshots/info__empty_workspace.snap
---
source: crates/pcb/tests/info.rs
assertion_line: 54
expression: output
---
Command: pcb info
Exit Code: 0

--- STDOUT ---
Workspace
Root: <TEMP_DIR>

No boards discovered
Searched for pcb.toml files with [board] sections
--- STDERR ---
