crates/pcb/tests/snapshots/info__json_format_with_preferred.snap
---
source: crates/pcb/tests/info.rs
expression: output
---
Command: pcb info -f json
Exit Code: 0

--- STDOUT ---
{
  "root": "<TEMP_DIR>",
  "config": {
    "workspace": {
      "pcb-version": "0.3",
      "members": [
        "boards/*",
        "special/custom-board"
      ],
      "preferred": [
        "boards/test-board"
      ]
    }
  },
  "packages": {
    "boards/main-board": {
      "module_path": "boards/main-board",
      "rel_path": "boards/main-board",
      "source": "workspace",
      "config": {
        "board": {
          "name": "MainBoard",
          "path": "main_board.zen"
        }
      },
      "preferred": false,
      "dirty": true,
      "entrypoints": [
        "main_board.zen"
      ]
    },
    "boards/test-board": {
      "module_path": "boards/test-board",
      "rel_path": "boards/test-board",
      "source": "workspace",
      "config": {
        "board": {
          "name": "TestBoard",
          "path": "test_board.zen",
          "description": "Main test board for validation"
        }
      },
      "preferred": true,
      "dirty": true,
      "entrypoints": [
        "test_board.zen"
      ]
    }
  }
}
--- STDERR ---
