crates/pcb/tests/snapshots/info__json_format_with_published_at.snap
---
source: crates/pcb/tests/info.rs
expression: normalized
---
Command: pcb info -f json
Exit Code: 0

--- STDOUT ---
{
  "root": "<TEMP_DIR>",
  "config": {
    "workspace": {
      "pcb-version": "0.3",
      "members": [
        "boards/*",
        "special/custom-board"
      ]
    }
  },
  "packages": {
    "boards/test-board": {
      "module_path": "boards/test-board",
      "version": "0.2.0",
      "rel_path": "boards/test-board",
      "source": "workspace",
      "config": {
        "board": {
          "name": "TestBoard",
          "path": "test_board.zen",
          "description": "Main test board for validation"
        }
      },
      "published_at": "<PUBLISHED_AT>",
      "entrypoints": [
        "test_board.zen"
      ]
    }
  }
}
--- STDERR ---
