crates/pcb/tests/snapshots/info__multiple_boards.snap
---
source: crates/pcb/tests/info.rs
expression: output
---
Command: pcb info
Exit Code: 0

--- STDOUT ---
Workspace
Root: <TEMP_DIR>
Toolchain: pcb >= 0.3
Members: boards/*, special/custom-board

Boards (4)
  BrokenBoard (unpublished) - boards/broken-board/broken.zen
  MainBoard (unpublished) - boards/main-board/main_board.zen
  TestBoard (unpublished) - boards/test-board/test_board.zen
    Main test board for validation
  CustomBoard (unpublished) - special/custom-board/custom.zen
    Special custom board with unique features
--- STDERR ---
