crates/pcb/tests/snapshots/info__multiple_zen_files.snap
---
source: crates/pcb/tests/info.rs
expression: output
---
Command: pcb info
Exit Code: 0

--- STDOUT ---
Workspace
Root: <TEMP_DIR>
Toolchain: pcb >= 0.3

Boards (1)
  AmbiguousBoard (unpublished) - (no .zen file found)
    Board with multiple zen files
--- STDERR ---
