crates/pcb/tests/snapshots/info__with_path.snap
---
source: crates/pcb/tests/info.rs
expression: output
---
Command: pcb info subdir
Exit Code: 0

--- STDOUT ---
Workspace
Root: <TEMP_DIR>/subdir
Toolchain: pcb >= 0.3
Members: boards/*, special/custom-board

Boards (1)
  TestBoard (unpublished) - boards/test-board/test_board.zen
    Main test board for validation
--- STDERR ---
